added new route (projects)

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>About Page</title>
+    <title>{{pageTitle}}</title>
 </head>
 <body>
-    <h1>About Page</h1>
+    {{> header}}
+    <h1>{{pageTitle}}</h1>
     <p>About us.</p>
     {{> footer}}
 </body>
