--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,7 +7,7 @@
 <body>
     {{> header}}
     <h1>{{pageTitle}}</h1>
-    <p>{{welcomeMsg}}</p>
+    <p>{{getProjectsMsg 'sweety'}}</p>
     {{> footer}}
 </body>
 </html>
